# meta-sanity

./: CHANGELOG.md  QUICK_REFERENCE.md  README.md  TESTING.md  pyproject.toml  requirements.txt
examples/: templating.meta.yaml
meta_sanity/: __init__.py  generate_meta.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_edge_cases.py  test_range_in_combination.py  test_template_operations.py  test_type_handling.py
